--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,9 @@
             width:60%;
 
         }
-        
+        body{
+           background:rgba(64, 224, 208, 0.644);
+       }
     </style>
     <body><br>
         <div class="header">
