--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <button><a href="home.html">Home</a></button>
         <button><a href="about.html" target="_blank"> About</a></button>
         <button><a href="knowledge.html"target="_blank">Knowledge</a></button>
-        <button><a href="contact.html" target="_blank">Contact</a></button>
+        <button><a href="conta.html" target="_blank">Contact</a></button>
         <button><a href="goal.html" target="_blank">Goal</a></button>
        
     </div>
