--- a/conta.html
+++ b/conta.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width ,initial-scale=1.0" >
-    </head>
+        <meta charset="utf-8">   
     <style>
        .contactform{
            width:85%;
@@ -64,19 +62,19 @@
         <div class="contactform">
             <h1> CONTACT ME </h1>
             <div class="txtb">
-                <label> FULL NAME:</label>
-                <input type="text" name="" value="" placeholder="eg:INDHIRANI A">
+                <label for="name"> FULL NAME:</label>
+                <input type="text" name="full name " value="" placeholder="eg:INDHIRANI A">
             </div>
             <div class="txtb">
-                <label> EMAIL:</label>
-                <input type="email" name="" value="" placeholder="eg:aindhirani123@gmail.com">
+                <label for="email"> EMAIL:</label>
+                <input type="email" name=" email" value="" placeholder="eg:aindhirani123@gmail.com">
             </div>
             <div class="txtb">
-                <label> MOBILE NUMBER:</label>
-                <input type="number" name="" value="" placeholder="eg:1234567891">
+                <label for="number"> MOBILE NUMBER:</label>
+                <input type="number" name=" mobile number" value="" placeholder="eg:1234567891">
             </div>
             <div class="txtb">
-                <label class="msg"> MESSAGE:</label>
+                <label  for="message" class="msg"> MESSAGE:</label>
                 <textarea> </textarea>
             </div>
             <div>
