--- a/conta.html
+++ b/conta.html
@@ -63,19 +63,19 @@
             <h1> CONTACT ME </h1>
             <div class="txtb">
                 <label for="name"> FULL NAME:</label>
-                <input type="text" name="full name " value="" placeholder="eg:INDHIRANI A">
+                <input type="text" name="full name " id="name" placeholder="eg:INDHIRANI A">
             </div>
             <div class="txtb">
                 <label for="email"> EMAIL:</label>
-                <input type="email" name=" email" value="" placeholder="eg:aindhirani123@gmail.com">
+                <input type="email" name=" email" id="mail" placeholder="eg:aindhirani123@gmail.com">
             </div>
             <div class="txtb">
                 <label for="number"> MOBILE NUMBER:</label>
-                <input type="number" name=" mobile number" value="" placeholder="eg:1234567891">
+                <input type="tel" name=" mobile number" id="num" maxlength="10" minlength="10" placeholder="eg:1234567891">
             </div>
             <div class="txtb">
                 <label  for="message" class="msg"> MESSAGE:</label>
-                <textarea> </textarea>
+                <textarea name="message" id="content" spellcheck="true" placeholder="Enter message" > </textarea>
             </div>
             <div>
             <button type="submit" clas="btn" style="padding:5%;width:100%;">SEND MESSAGE</button>
