--- a/conta.html
+++ b/conta.html
@@ -75,10 +75,10 @@
             </div>
             <div class="txtb">
                 <label  for="message" class="msg"> MESSAGE:</label>
-                <textarea name="message" id="content" spellcheck="true" placeholder="Enter message" > </textarea>
+                <textarea name="message" id="content" spellcheck="true" placeholder="Enter message" cols="30" rows="10"> </textarea>
             </div>
             <div>
-            <button type="submit" clas="btn" style="padding:5%;width:100%;">SEND MESSAGE</button>
+            <button type="submit" value="submit" id="submit" clas="btn" style="padding:5%;width:100%;">SEND MESSAGE</button>
             </div>
         </div>
     </form>
