--- a/conta.html
+++ b/conta.html
@@ -53,9 +53,11 @@
       
 
        .txtb:hover{
-           background-color: rgb(6, 100, 88);
+           background-color:white;
        }
-       label:hover{ color:white;}
+       .btn{
+           font-weight:100%;
+           color:black;
     </style>
     <body>
         <form action="https://formsubmit.co/aindhirani91@gmail.com" method="POST">
@@ -77,8 +79,8 @@
                 <label  for="message" class="msg"> MESSAGE:</label>
                 <textarea name="message" id="content" spellcheck="true" placeholder="Enter message" cols="30" rows="10"> </textarea>
             </div>
-            <div>
-            <button type="submit" value="submit" id="submit" clas="btn" style="padding:5%;width:100%;">SEND MESSAGE</button>
+            <div clas="btn">
+            <button type="submit" value="submit" id="submit"  style="padding:5%;width:100%;">SEND MESSAGE</button>
             </div>
         </div>
     </form>
