--- a/conta.html
+++ b/conta.html
@@ -56,7 +56,8 @@
            background-color:white;
        }
        .btn{
-           font-weight:100%;
+           font-weight:200%;
+           font-size:100%;
            color:black;
     </style>
     <body>
