--- a/conta.html
+++ b/conta.html
@@ -37,7 +37,7 @@
            
 
        }
-       .txtb input,.txtb textarea{
+       .txtb input{
            width:100%;
            border:none;
            background:none;
@@ -46,7 +46,13 @@
            margin-top: 6%;
            text-align:center;
        }
-       
+       .txtb textarea{
+           font-size: 150%;
+           background:none;
+           outline:none;
+           text-align:center;
+           border:none;
+           font-family:Verdana, Geneva, Tahoma, sans-serif;;
        body{
            background:rgba(64, 224, 208, 0.644);
        }
