--- a/conta.html
+++ b/conta.html
@@ -52,7 +52,7 @@
            outline:none;
            text-align:center;
            border:none;
-           font-family:Verdana, Geneva, Tahoma, sans-serif;;
+           font-family:Verdana, Geneva, Tahoma, sans-serif;
        body{
            background:rgba(64, 224, 208, 0.644);
        }
@@ -61,10 +61,10 @@
        .txtb:hover{
            background-color:white;
        }
-       .btn{
-           font-weight:200%;
-           font-size:100%;
-           color:black;
+           button{
+           color:orangered;
+           }
+           button:hover{ color:green;}
     </style>
     <body>
         <form action="https://formsubmit.co/aindhirani91@gmail.com" method="POST">
