--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <body><br><br>
     <div class="link">
         <button><a href="home.html">Home</a></button>
-        <button><a href="about.html" target="_blank"> About</a></button>
-        <button><a href="knowledge.html"target="_blank">Knowledge</a></button>
-        <button><a href="conta.html" target="_blank">Contact</a></button>
-        <button><a href="goal.html" target="_blank">Goal</a></button>
+        <button><a href="about.html" > About</a></button>
+        <button><a href="knowledge.html">Knowledge</a></button>
+        <button><a href="conta.html">Contact</a></button>
+        <button><a href="goal.html">Goal</a></button>
        
     </div>
     <br><br><br><br>
