--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         padding-left: 10px;
         padding-right: 10px;
     }
+     @media(min-height:1024px)
+    {
+        body{
+            margin-top: 25%;     
+        }
 </style>
 <body><br><br>
     <div class="link">
@@ -70,5 +75,7 @@
     </div>
     <h1><i>Indhirani A  CSE</i></h1>
     <h1 class="dev"><i>DEVELOPER</i></h1>
+   
+    }
     </body>
 </html>
